--- a/docs/getit.css
+++ b/docs/getit.css
@@ -22,15 +22,18 @@ Algumas informações úteis e dicas:
   - Sombra: https://codepen.io/sdthornton/pen/wBZdXq
  */
 
-html,
+html{
+  height: 100%;
+}
 body {
   font-family: "Roboto", sans-serif;
   background-color: #ece6e6;
+  height: inherit;
 }
 .appbar{
   background-color: rgba(255, 255, 0, 0.76);
   align-items: center;
-  height: 10%;
+  height: 5%;
   display: flex;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.6);
 }
@@ -45,9 +48,10 @@ body {
 }
 
 .container{
-  align-items: center;
   display: flex;
+  align-items: center;
   flex-direction: column;
+  height: 90%;
 }
 
 .form-card{
@@ -58,15 +62,111 @@ body {
   margin-top: 1rem;
   border-radius: 0.5rem;
   width: 30%;
+  height: 10%;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.6);
   justify-content: space-around;
 }
 
 .form-card-title{
   font-size: 1rem;
+  border: none;
 }
 .type{
   color: black;
+
+}
+
+.autoresize{
+  display: flex;
+  border: none;
+}
+
+.btn {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+
+  background-color: #f7d736;
+
+  transition: background-color 0.3s;
+}
+
+.btn > * {
+  position: relative;
+}
+
+.btn:before {
+  content: "";
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  display: block;
+  width: 0;
+  padding-top: 0;
+
+  border-radius: 100%;
+
+  background-color: rgba(236, 240, 241, 0.3);
+
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+
+  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+}
+
+.card-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  flex-wrap: wrap;
+}
+
+.card{
+  margin: 0.5rem;
+  display: flex;
+  width: 15%;
+  height: 30%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-color-1{
+  background-color:#ead3a7;
+}
+
+.card-color-2{
+  background-color:#9de0f5;
+}
+
+.card-color-3{
+  background-color:#ef89ba;
+}
+
+.card-color-4{
+  background-color:#fae890;
+}
+
+.card-color-5{
+  background-color:#abe9c1;
 }
 
 /* Você pode usar o CSS comentado abaixo, se ajudar */
