--- a/docs/getit.css
+++ b/docs/getit.css
@@ -62,9 +62,10 @@ body {
   margin-top: 1rem;
   border-radius: 0.5rem;
   width: 30%;
-  height: 10%;
+  height: 15%;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.6);
   justify-content: space-around;
+
 }
 
 .form-card-title{
@@ -79,6 +80,7 @@ body {
 .autoresize{
   display: flex;
   border: none;
+  margin-top: 0.5rem;
 }
 
 .btn {
@@ -147,6 +149,27 @@ body {
   height: 30%;
   flex-direction: column;
   justify-content: space-between;
+  border-radius:0.5rem;
+  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.6);
+
+}
+
+.card-title{
+  font-family: 'Permanent Marker', cursive;
+  margin: 0.5rem;
+  font-weight: bold;
+  height: 20%;
+}
+
+.card-content{
+  font-family: 'Permanent Marker', cursive;
+  color:#4c4c4c;
+  justify-content: center;
+  display: flex;
+  height: 80%;
+  align-items: center;
+  margin: 0.5rem;
+  font-size: 98%;
 }
 
 .card-color-1{
@@ -169,6 +192,36 @@ body {
   background-color:#abe9c1;
 }
 
+.card-rotation-1{
+  transform: rotate(-2deg);
+}
+.card-rotation-2{
+  transform: rotate(2deg);
+}
+.card-rotation-3{
+  transform: rotate(1deg);
+}
+.card-rotation-4{
+  transform: rotate(-1deg);
+}
+.card-rotation-5{
+  transform: rotate(5deg);
+}
+.card-rotation-6{
+  transform: rotate(-5deg);
+}
+.card-rotation-7{
+  transform: rotate(6deg);
+}
+.card-rotation-8{
+  transform: rotate(-6deg);
+}
+.card-rotation-9{
+  transform: rotate(3deg);
+}
+.card-rotation-10{
+  transform: rotate(4deg);
+}
 /* Você pode usar o CSS comentado abaixo, se ajudar */
 /* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
 /* .btn {
